--- a/css/partners.css
+++ b/css/partners.css
@@ -1,6 +1,8 @@
 /*--------------------Our Partners CSS-------------------*/
 #partnerContent{
-	padding-top:240px;
+	margin-top:180px;
+	margin-left:10%;
+	margin-right:10%;
 }
 #corporatePartners{
 	-moz-display:flex;
@@ -23,13 +25,13 @@
 #partnersLeft{
     display: inherit;
     flex-direction: column;
-    flex: 1 400px;
+    flex: 1 300px;
     align-items: center;
 }
 
 #partnersRight{
     display: inherit;
-    flex: 1 400px;
+    flex: 1 300px;
     flex-direction: column;
     flex-wrap: wrap;
 	align-items: center; 
