--- a/css/programs.css
+++ b/css/programs.css
@@ -3,7 +3,7 @@
 	display: flex;
 	display: -ms-flex;
 	display: -webkit-flex;
-	padding-top: 240px;
+	padding-top: 150px;
 	flex-direction:column;
 	
 }
@@ -15,4 +15,13 @@
 }
 #LSandRS article p{
 	width: 400px;
+}
+article img{
+    width: 100%;
+    
+}
+@media screen and (min-width: 1050px){
+    article img{
+        width: 800px;
+    }
 }
