--- a/css/general.css
+++ b/css/general.css
@@ -50,7 +50,6 @@ nav{
 	background:#37b8eb;
     position: relative;
     padding: 0;
-    
 	margin: 0% 0% 0% 10%;
 	
 }
@@ -62,17 +61,19 @@ nav ul{
 	display: flex;
     flex: 1;
 	margin: 0;
+    
 }
 nav li{
 	display:inline;
-	padding: 10px 4%;
+	padding: 0px 4%;
 	
 }
 
 nav li a{
  	text-decoration: none;
+    
 	display: inherit;
-    padding: 0 15px;
+    padding: 0px 15px;
     /* border: 1px solid black; */
     list-style-type:  none;
 	text-align: center;
@@ -85,11 +86,12 @@ nav li a:active{
   color:red;
 }
 nav li a:link{
-  color:black;
+  color:white;
 }
 #navButton a{
 	padding: 0;
 }
+
 
 @media screen and (max-width: 1050px){/*this setting is for my screen*/
 	#horizontalNav{
@@ -119,7 +121,7 @@ nav li a:link{
 	.dropbtn {
 		background-color: #37b8eb;
 		color: white;
-		padding: 16px;
+		padding: 5px 0px; 
 		font-size: 16px;
 		border: none;
 		cursor: pointer;
@@ -173,6 +175,9 @@ footer{
 footer p{
 	margin:0px;
 }
+footer h2{
+    color: white;
+}
 /* npowerblue #37b8eb*/
 #donateRect {
     x:5px;
@@ -181,13 +186,13 @@ footer p{
     ry: 10px;
     fill: #f4ef5a;
     stroke: black;
-    stroke-width: 3px;
+    stroke-width: 1px;
 }
 #socIcon {
 height:30px;
 border-radius: 7px;
 padding: 0px 1px;
-stroke: 2px black;
+stroke: 1px black;
 }
 
 #donateText {
@@ -203,13 +208,12 @@ stroke: 2px black;
 #navButton {
     font-family: Trebuchet MS;
     font-weight: bold;
-    margin-bottom: 2px;
+    margin-bottom: 0px;
     background:#37b8eb;
 }
 #donateIcon {
-	top: 2p
-    width:100px;
-    height:40px;
+    width:60px;
+    height:30px;
 }
 
 a.footLinks {
