--- a/css/general.css
+++ b/css/general.css
@@ -1,7 +1,17 @@
+/*--------------------Font--------------------*/
+@font-face {
+    font-family: 'AvenirLTStd';
+    src: url(fonts/AvenirLTStd-Light.otf);
+}
+@font-face {
+    font-family: 'AvenirLTStdH';
+    src: url(fonts/AvenirLTStd-Heavy.otf);
+}
 /*------------------Body Section------------------*/
 body {
 	height: 100%;
 	margin: 0;
+	font-family: 'AvenirLTStd', "Trebuchet MS", sans-serif;
 }
 /*----------------Container Section---------------*/
 #container{
@@ -14,7 +24,6 @@ body {
 	min-height: 100vh; 
 }
 /*-------------------Top Area---------------------*/
-
 #toparea{
 	display: inline-block;
 	background: #37b8eb;
@@ -23,23 +32,29 @@ body {
 	z-index: 1;
 }
 #logoAndSocialMedia{
-	
-    z-index:1;
+	z-index:1;
 	/*space-between, spaces the elements apart equally, in this case the logo and the social media*/
-	padding: 0% 10%;
+	padding: 1% 10% 0%;
     margin: 0;
 }
 .socialMedia{
-    top: 20px;
-    position: absolute;
-	left: 70%;
-	
+    display:flex;
+    justify-content:flex-end;
+	margin: -50px -60px 40px;
 }
-@media screen and (max-width: 1050px){/*this setting is for my screen*/
+@media screen and (max-width: 750px){/*this setting is for my screen*/
     .socialMedia{
-        position: static;
+	display:block;
+    position:static;
+	margin:0;
         
     }
+}
+
+#slogan {
+    font-family: Century Gothic;
+    font-size:18px;
+    margin: -10px 0px 0px 210px;
 }
 	
 /*---------------Navigation Section----------------*/
@@ -79,19 +94,34 @@ nav li a{
 	text-align: center;
 }
 
-nav li a:hover{
-	color: yellow;
-}
-nav li a:active{
-  color:red;
-}
+
 nav li a:link{
   color:white;
+}
+nav li a:visited{
+  color:white;
+}
+nav li a:hover{
+	color:yellow;
+}
+nav li a:active{
+  color:yellow;
+}
+footer a:link{
+  color:white;
+}
+footer a:visited{
+  color:white;
+}
+footer a:hover{
+	color:yellow;
+}
+footer a:active{
+  color:yellow;
 }
 #navButton a{
 	padding: 0;
 }
-
 
 @media screen and (max-width: 1050px){/*this setting is for my screen*/
 	#horizontalNav{
@@ -158,6 +188,7 @@ nav li a:link{
 		display: block;
 	}
 }
+
 /*--------------Footer Section----------------*/
 footer{
 	display: inherit;
@@ -171,6 +202,9 @@ footer{
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+}
+#footMediaLinks{
+	margin:15px 0px;
 }
 footer p{
 	margin:0px;
@@ -195,26 +229,17 @@ padding: 0px 1px;
 stroke: 1px black;
 }
 
-#donateText {
-    font-weight: bold;
-    font-size:20px;
-    font-family:Tahoma, Arial;
-}
-#slogan {
-    font-family: Century Gothic;
-    font-size:18px;
-    margin: -10px 0px 0px 210px;
-}
 #navButton {
-    font-family: Trebuchet MS;
-    font-weight: bold;
-    margin-bottom: 0px;
-    background:#37b8eb;
+    font-family: 'AvenirLTStdH', "Trebuchet MS", sans-serif;
 }
 #donateIcon {
     width:60px;
     height:30px;
 }
+#applyIcon {
+	width:120px;
+	height:60px;
+	}
 
 a.footLinks {
     text-decoration: none;
