--- a/css/general.css
+++ b/css/general.css
@@ -68,21 +68,23 @@ nav{
 	margin: 0% 0% 0% 10%;
 	
 }
+
 .dropdown{
 	display:none;
 }
 
-nav ul{
+nav ul li{
 	display: flex;
     flex: 1;
 	margin: 0;
+	float: right;
+	padding: 0px 4%;
     
 }
-nav li{
-	display:inline;
-	padding: 0px 4%;
-	
+nav ul li:first-child{
+	float: left;
 }
+
 
 nav li a{
  	text-decoration: none;
@@ -93,6 +95,7 @@ nav li a{
     list-style-type:  none;
 	text-align: center;
 }
+
 
 
 nav li a:link{
@@ -237,9 +240,16 @@ stroke: 1px black;
     height:30px;
 }
 #applyIcon {
-	width:120px;
-	height:60px;
+	padding: 0;
+	margin: 0;
+	width:60px;
+	height:30px;
 	}
+
+
+nav.li{
+	float: right;
+}
 
 a.footLinks {
     text-decoration: none;
